# proyecto-beepower

./: .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  .gitignore  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: auth.py  items.py  users.py
backend/app/core/: config.py  security.py
backend/app/db/: database.py  models.py
backend/app/schemas/: item.py  user.py
backend/docs/procedimientos/: crear_nueva_entidad_bd.md
backend/migrations/: env.py
backend/migrations/versions/: 5522a5b33732_crear_tabla_game_items.py  81392139acb8_crear_tabla_usuarios.py
documentation/installation/: windows11.md
documentation/start-up/: windows11.md
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/api/: axios.ts
frontend/src/features/auth/: types.ts
frontend/src/features/auth/api/: authService.ts
frontend/src/features/auth/components/: LoginForm.tsx
frontend/src/features/dashboard/: Dashboard.tsx
frontend/src/features/items/: types.ts
frontend/src/features/items/api/: itemService.ts
frontend/src/features/items/components/: ItemForm.tsx  ItemList.tsx
frontend/src/features/items/hooks/: useItems.ts
frontend/src/features/schemas/: itemSchema.ts
frontend/src/store/: useAuthStore.ts
